Closure_91/evosuite/original/evosuite-report-org/test_build.log
cd /home/liumengjiao/Desktop/CI/Benchmark/../bugs/Closure_91_buggy && timeout 300000 javac -cp  /home/liumengjiao/Desktop/defects4j/framework/lib/test_generation/generation/evosuite-current.jar:build/classes/:lib/*  /home/liumengjiao/Desktop/CI/Evosuite/Closure_91/Closure/evosuite/0/com/google/javascript/jscomp/CheckGlobalThis_ESTest.java /home/liumengjiao/Desktop/CI/Evosuite/Closure_91/Closure/evosuite/0/com/google/javascript/jscomp/CheckGlobalThis_ESTest_scaffolding.java >> evosuite-report-org/test_build.log 2>&1

/home/liumengjiao/Desktop/CI/Evosuite/Closure_91/Closure/evosuite/0/com/google/javascript/jscomp/CheckGlobalThis_ESTest.java:52: error: cannot find symbol
      node0.addSuppression("U?fined");
           ^
  symbol:   method addSuppression(String)
  location: variable node0 of type Node
/home/liumengjiao/Desktop/CI/Evosuite/Closure_91/Closure/evosuite/0/com/google/javascript/jscomp/CheckGlobalThis_ESTest.java:64: error: cannot find symbol
      node0.addSuppression("Undefined");
           ^
  symbol:   method addSuppression(String)
  location: variable node0 of type Node
/home/liumengjiao/Desktop/CI/Evosuite/Closure_91/Closure/evosuite/0/com/google/javascript/jscomp/CheckGlobalThis_ESTest.java:91: error: cannot find symbol
      node0.addSuppression("");
           ^
  symbol:   method addSuppression(String)
  location: variable node0 of type Node
/home/liumengjiao/Desktop/CI/Evosuite/Closure_91/Closure/evosuite/0/com/google/javascript/jscomp/CheckGlobalThis_ESTest.java:113: error: cannot find symbol
      node0.addSuppression("Uqfndefned");
           ^
  symbol:   method addSuppression(String)
  location: variable node0 of type Node
/home/liumengjiao/Desktop/CI/Evosuite/Closure_91/Closure/evosuite/0/com/google/javascript/jscomp/CheckGlobalThis_ESTest.java:302: error: cannot find symbol
      node1.addSuppression("NUMBER_STRING_BOOLEAN");
           ^
  symbol:   method addSuppression(String)
  location: variable node1 of type Node
5 errors
